# resume-generator

./: .gitignore  Cargo.toml  README.md  TODO.md  User_Stories.md  docker-compose.yaml  package-lock.json  package.json  template.md  tmp.sql
.scripts/: check  test
migrations/: 20240924183344_create-tables.sql
src/: app.rs  changelist.rs  interaction.rs  lib.rs  logging.rs  main.rs  model.rs  router.rs  state.rs  store.rs  ttuple.rs  view.rs
src/add/: mod.rs
src/handler/: add.rs  mod.rs  show.rs
src/handler/show/: mod.rs  one.rs
src/model/: mod.rs  skill.rs
