[package]
name = "resume-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = ["macros", "derive", "postgres", "runtime-tokio", "tls-rustls-ring", "migrate"] }
tokio = { version = "1.40.0", features = ["macros", "rt"] }
