[package]
name = "res-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.82"
clap = { version = "4.5.18", features = ["derive"] }
dotenvy = "0.15.7"
log = "0.4.22"
mockall = "0.13.0"
simplelog = "0.12.2"
sqlx = { version = "0.8.2", features = ["macros", "derive", "runtime-tokio", "tls-rustls-ring", "migrate", "sqlite"] }
tokio = { version = "1.40.0", features = ["macros", "rt"] }
